--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,52 @@
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+
+html {
+  overflow: hidden;
+}
+
 body {
-	background-color: #455A64;
+  text-align: center;
+  color: white;
+  background-color: #455a64;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
 }
 
 button {
-  padding: 5px 10px;
+  margin-left: 1rem;
+  padding: 0.1rem 0.6rem;
   font-size: 16px;
   text-align: center;
   cursor: pointer;
   outline: none;
   color: #fff;
-  background-color: #4DB6AC;
+  background-color: #4db6ac;
   border: none;
-  border-radius: .4rem;
-  box-shadow: 0 4px #90A4AE;
+  border-radius: 0.4rem;
+  box-shadow: 0 4px #90a4ae;
 }
 
 button:hover {
-	transition: ease-in-out 200ms;
-  background-color: #26A69A;
+  transition: ease-in-out 200ms;
+  background-color: #26a69a;
 }
 
 button:active {
-  background-color: #26A69A;
-  box-shadow: 0 2px #78909C;
+  background-color: #26a69a;
+  box-shadow: 0 2px #78909c;
   transform: translateY(4px);
 }
 
-input{
-	padding: .5em;
-	border-radius: .5rem;
+input {
+  padding: 0.5rem;
+  border-radius: 0.5rem;
 }
 .node circle {
-  fill: #FAFAFA;
-  stroke: #26A69A;
+  fill: #fafafa;
+  stroke: #26a69a;
   stroke-width: 3px;
 }
 
@@ -46,6 +60,6 @@ input{
 
 .link {
   fill: none;
-  stroke: #ECEFF1;
+  stroke: #eceff1;
   stroke-width: 2px;
 }
